# ChangeLog for sec-policy/selinux-hal
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.1 2006/11/22 05:52:08 pebenito Exp $

*selinux-hal-20061114 (22 Nov 2006)

  22 Nov 2006; Chris PeBenito <pebenito@gentoo.org> +metadata.xml,
  +selinux-hal-20061114.ebuild:
  Initial commit.
