@@ -1,0 +1,3 @@
+MD5 4c103a26e8d4bce3ce0e6d4ce7651374 refpolicy-20070329.tar.bz2 313327
+RMD160 1d30ae525f3d7b429d100f9b7d1bd43395ba0612 refpolicy-20070329.tar.bz2 313327
+SHA256 e0c82834a62b584578250230651a49c00a13e6be8689611326f6fac06e2d88fa refpolicy-20070329.tar.bz2 313327
