@@ -1,6 +1,12 @@
 # ChangeLog for sec-policy/selinux-hal
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.1 2006/11/22 05:52:08 pebenito Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.2 2007/03/29 23:37:49 pebenito Exp $
+
+*selinux-hal-20070329 (29 Mar 2007)
+
+  29 Mar 2007; Chris PeBenito <pebenito@gentoo.org>
+  +selinux-hal-20070329.ebuild:
+  New SVN snapshot.
 
 *selinux-hal-20061114 (22 Nov 2006)
 
